# Fira

./: README.md  cleanup.bash  compile.bash  how_to_run.py  robot.py  setup.bash  transform.py
src/aura/: CMakeLists.txt  package.xml
src/aura/include/aura/: custom_mapping.h
src/aura/launch/: auto_move.launch  depth_detect.launch  fake_odometry.launch  image_view.launch  mapping.launch  mapping1.launch  mapping2.launch  move_base.launch  move_base1.launch  move_base2.launch  setup_fast.launch  setup_slow.launch  start_fast.launch  start_slow.launch  tf_ros.launch  world.launch  world1.launch
src/aura/scripts/: Controller.py  Mapper.py  auto_move.py  cmd_move.py  image_process.py  planner.py  robot.py  test.py  test1.py
src/aura/src/: custom_mapping.cpp  custom_tf.cpp
src/aura/worlds/: world1-1  world1-2.world  world2-2.world  world2-3.world
src/data_mapping/: CMakeLists.txt  package.xml
src/data_mapping/include/data_mapping/: data_mapping.h
src/data_mapping/launch/: data_mapping.launch
src/data_mapping/src/: data_mapping.cpp
src/depth_detector/: CMakeLists.txt  package.xml
src/depth_detector/data/: camera_info.aura  data_set_x.aura  data_set_y.aura  depth_data.aura  sample_depth.aura
src/depth_detector/include/depth_detector/: data_set.h  rgb_to_point_cloud.h
src/depth_detector/launch/: rgb_to_point_cloud.launch
src/depth_detector/src/: data_set.cpp  rgb_to_point_cloud.cpp  test.cpp
src/fake_odometry/: CMakeLists.txt  package.xml
src/fake_odometry/include/fake_odometry/: fake_odometry.h
src/fake_odometry/launch/: fake_odometry.launch
src/fake_odometry/src/: fake_odometry.cpp
src/pc_mapping/: CMakeLists.txt  package.xml
src/pc_mapping/include/pc_mapping/: pc_mapping.h
src/pc_mapping/launch/: pc_mapping.launch
src/pc_mapping/src/: pc_mapping.cpp
world/: world1-3.world  world1-4.world  world1-5.world  world1-6.world  world2-1.world  world2-4.world  world2-5.world  world3-1.world  world3-2.world  world3-3.world  world3-4.world
