<?xml version="1.0"?>
<package format="2">
    <name>depth_detector</name>
    <version>1.0.0</version>
    <description>The mapping package</description>

    <maintainer email="kotksthegame@gmail.com">ashkan</maintainer>


    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>depth_image_proc</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>image_transport</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>image_geometry</build_depend>
    <build_depend>pc_mapping</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>depth_image_proc</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>image_transport</build_export_depend>
    <build_export_depend>nav_msgs</build_export_depend>
    <build_export_depend>cv_bridge</build_export_depend>
    <build_export_depend>image_geometry</build_export_depend>
    <build_export_depend>pc_mapping</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>depth_image_proc</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>image_transport</exec_depend>
    <exec_depend>nav_msgs</exec_depend>
    <exec_depend>cv_bridge</exec_depend>
    <exec_depend>image_geometry</exec_depend>
    <exec_depend>pc_mapping</exec_depend>

    <export>

    </export>
</package>
